--- a/views/partials/includes.hbs
+++ b/views/partials/includes.hbs
@@ -11,6 +11,9 @@
 
 <script type="text/javascript" src="/vendors/pace/pace.min.js"></script>
 <script type="text/javascript" src="/js/jquery.min.js"></script>
+<script type="text/javascript" src="/js/jquery.ui.widget.js"></script>
+<script type="text/javascript" src="/js/jquery.iframe-transport.js"></script>
+<script type="text/javascript" src="/js/jquery.fileupload.js"></script>
 <script type="text/javascript" src="/js/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="/js/utils.js"></script>
 <script type="text/javascript" src="/vendors/layer/layer.js"></script>
