--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -44,12 +44,12 @@
                         </li>
                         <li class="dropdown">
                             <a href="#" class="ava dropdown-toggle" data-toggle="dropdown">
-                                <img class="img-circle" src="{{user.headPortrait}}">
+                                <img class="img-circle headPortrait" src="{{user.headPortrait}}">
                             </a>
                             <ul class="dropdown-menu" role="menu">
                                 <li>
                                     <a href="/user/basicInfo" class="ava">
-                                        <img class="img-circle" src="{{user.headPortrait}}">
+                                        <img class="img-circle headPortrait" src="{{user.headPortrait}}">
 	    		                		<span>{{user.username}}</span>
                                     </a>
                                 </li>
