--- a/views/basic/headPortrait.hbs
+++ b/views/basic/headPortrait.hbs
@@ -40,7 +40,7 @@
         $("#picDiv").css("background-image", "url(" + $("#aaa").val() + ")");
         var zoom = 1;
         var zoomMax = 1;
-        var zoomMin = zoomMax*0.6;
+        var zoomMin = zoomMax * 0.6;
         var zoomRitio = 1.1;
         var oImg = document.getElementById("pic");
         var oImgw = oImg.width;
@@ -53,11 +53,8 @@
         var ip = getImgPosition();
         var x = 0;
         var y = 0;
+        var dx = 0, dy = 0;
         hiddenPic();
-        function initZoom(max){
-            zoomMax = max;
-            zoomMin = zoomMax*0.6;
-        }
         function ImageChange(args) {
             if (args) {
                 if (x > 0) {
@@ -120,7 +117,7 @@
                 pos2 = mousePos();
                 var vx = pos2.x - pos1.x;
                 var vy = pos2.y - pos1.y;
-                if (ip.xLeft + vx >= dp.xLeft && ip.xRigh + vx <= dp.xRigh && ip.yTop + vy >= dp.yTop && ip.yBottom + vy <= dp.yBottom) {
+                if (ip.xLeft + vx >= dp.xLeft + dx && ip.xRigh + vx <= dp.xRigh - dx && ip.yTop + vy >= dp.yTop + dy && ip.yBottom + vy <= dp.yBottom - dy) {
                     x = ip.xLeft - dp.xLeft + vx;
                     y = ip.yTop - dp.yTop + vy;
                     $("#pic").css("left", (x) + "px");
@@ -145,9 +142,9 @@
             });
             $("#submit").click(function () {
                 var msgDiv = $('#message');
-                if(uploaded==false){
+                if (uploaded == false) {
                     msgDiv.html('<div class="alert alert-success">请上传完图片再提交 </div>');
-                }else{
+                } else {
                     $.ajax("/user/headPortrait/post", {
                                 type: "post",
                                 data: {
@@ -156,7 +153,6 @@
                                     y: y,
                                     zoom: zoom,
                                 },
-                                async: false,
                                 success: function (msg) {
                                     if (msg.success) {
                                         msgDiv.html('<div class="alert alert-success">' + msg.msg + ' </div>');
@@ -174,29 +170,59 @@
                 }
             });
         });
-        function hiddenPic(){
+        function hiddenPic() {
             $("#pic").hide();
             uploaded = false;
         }
-        function showPic(){
-            $("#pic").show();
-            uploaded = true;
+        function showPic() {
+            $.ajax("/utils/picInfo", {
+                        type: "post",
+                        data: {
+                            path: picPath,
+                        },
+                        success: function (msg) {
+                            initPicInfo(msg.width, msg.height);
+                            $("#pic").show();
+                            uploaded = true;
+                        }
+                    }
+            );
+
+        }
+        function initPicInfo(width, height) {
+            var z = width / height;
+            if (z > 1) {
+                zoomMax = 1 / z;
+                dy = (width - height) / 2 / width * 300;
+            } else if (z < 1) {
+                zoomMax = z;
+                dx = (height - width) / 2 / height * 300
+            }
+            zoom = zoomMax;
+            zoomMin = zoomMax * 0.6;
+            oImg.width = oImgw * zoom;
+            oImg.height = oImgh * zoom;
+            ip = dp;
+            x = ip.xLeft - dp.xLeft + dx;
+            y = ip.yTop - dp.yTop + dy;
+            $("#pic").css("left", (x) + "px");
+            $("#pic").css("top", (y) + "px");
         }
         var msgChecked = false;
-        function clearMsg(){
+        function clearMsg() {
             var msgDiv = $('#message');
             msgDiv.removeClass('has-error').addClass('has-success');
             msgDiv.html('');
             msgChecked = false;
         }
 
-        function checkMsg(){
+        function checkMsg() {
             var msgDiv = $('#message');
-            if((!msgChecked)&&msgDiv.html()!=""){
-                setTimeout(clearMsg,2000);
+            if ((!msgChecked) && msgDiv.html() != "") {
+                setTimeout(clearMsg, 2000);
                 msgChecked = true;
             }
         }
-        setInterval(checkMsg,1000);
+        setInterval(checkMsg, 1000);
     </script>
 {{/section}}
