添加写文章页面

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -35,9 +35,27 @@
                             </a>
                             <ul class="dropdown-menu publishs" role="menu">
                                 <li>
-                                    <a href="">
-                                        <i class=" icon"></i>
-                                        <span></span>
+                                    <a href="/article/add">
+                                        <i class="fa fa-pencil-square icon"></i>
+                                        <span>写文章</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="/mblog/post/new/image">
+                                        <i class="fa fa-camera icon"></i>
+                                        <span>发图片</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="/mblog/post/new/video">
+                                        <i class="fa fa-question-circle icon"></i>
+                                        <span>记收入</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="/mblog/post/new/ask">
+                                        <i class="fa fa-question-circle icon"></i>
+                                        <span>记支出</span>
                                     </a>
                                 </li>
                             </ul>
