--- a/views/basic/login.hbs
+++ b/views/basic/login.hbs
@@ -57,12 +57,12 @@
                 },
                 conditional: {
                     username: function () {
-                        return /^[a-z][a-z_0-9]{4,18}$/i.test($(this).val());
+                        return /^[a-zA-Z][a-zA-Z_0-9]{4,18}$/i.test($(this).val());
                     }
                 },
                 description: {
                     username: {
-                        conditional: '<div class="alert alert-danger">字母/字母+数字组合,5-18位</div>'
+                        conditional: '<div class="alert alert-danger">用戶名为字母/字母+数字组合,5-18位</div>'
                     },
                     message: {
                         required: '<div class="alert alert-danger">请先输入用户名/密码再进行登录操作</div>'
